fix: disocvery info
